hphp/hack/test/typecheck/always_true.php
<?hh //strict

function foo(array<int> $arg): void {
  if (null !== $arg) {
  }
}
